<resources>
    <string name="app_name">Mobile House</string>
    <string name="bt_paycash">Pay via Cash</string>
    <string name="add_cardnum">Card Number</string>
    <string name="add_monyear">Month/Year</string>
    <string name="add_cvv">CVV</string>
    <string name="add_name">Card Holder Name</string>
    <string name="bt_paynow">Pay Now</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_payment">Proceed to Pay</string>
    <string name="btn_update3">Confirm</string>
    <string name="bt_payments">My payment methods</string>
    <string name="bt_delete">Delete</string>
    <string name="bt_addanother">Add Another Card</string>
    <string name="tv_cuslogin_topic">Mobile House</string>
    <string name="et_cuslogin_username">Username</string>
    <string name="et_cuslogin_Password">Password</string>
    <string name="tv_cuslogin_forget_pw">Forget Password?</string>
    <string name="bt_cuslogin_login">Login</string>
    <string name="tv_cuslogin_signup">Sign Up</string>
    <string name="tv_cuslogin_log_as_admin">Login as an Admin</string>
    <string name="et_cusprofile_name">Name</string>
    <string name="et_cusprofile_email">Email</string>
    <string name="et_cusprofile_address">Address</string>
    <string name="et_cusprofile_phone">Phone No</string>
    <string name="rb_cusprofile_male">Male</string>
    <string name="rb_cusprofile_female">Female</string>
    <string name="et_cusprofile_pw">Password</string>
    <string name="bt_cusprofile_submit">Submit</string>
    <string name="et_profileup_name">Name</string>
    <string name="et_profileup_email">Email</string>
    <string name="et_profileup_phone">Phone No</string>
    <string name="rb_profileup_male">Male</string>
    <string name="rb_profileup_female">Female</string>
    <string name="et_profileup_cupw">Currunt Password</string>
    <string name="et_profileup_newpw">New Password</string>
    <string name="et_profileup_repw">Re-enter new Password</string>
    <string name="et_adminlog_uname">Username</string>
    <string name="et_adminlog_pw">Password</string>
    <string name="bt_adminlog_login">login</string>
    <string name="title_activity_add_items">Add_items</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="et_additem_name">Item Name</string>
    <string name="et_additem_Price">Item Price</string>
    <string name="tv_additem_addimg">Add image of Item</string>
    <string name="et_additem_about">About Item</string>
    <string name="bt_additem_confirm">CONFIRM</string>
    <string name="tv_upitme">Update Item</string>
    <string name="et_upitme_name">Item Price</string>
    <string name="et_upitme_price">Item Price</string>
    <string name="tv_upitme_addimg">Add Image of Item</string>
    <string name="et_upitme_about">About Item</string>
    <string name="bt_upitme_update">UPDATE</string>
    <string name="tv_viewit">View Added Items</string>
    <string name="bt_profileup_update">Update</string>
    <string name="bt_profileup_delete">Delete</string>
</resources>